--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,13 @@ body {
     top : 30px;
     left : 30px;
 } 
+
+#monster{
+    position : absolute;
+    background-color: red;
+    width : 30px;
+    height : 30px;
+    top : 90px;
+    left : 90px;
+    
+}
