--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
 
 #bomb {
     position : absolute;
-    background-color : pink;
+    background-image : url('../medias/bomb.png');
     display : none;
     width : 30px;
     height : 30px;
