--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,11 +3,17 @@ body {
     margin : 0;
 }
 
+main {
+    margin : auto;
+
+}
+
 #map {
     position : relative;
-    width : 590px;
+    width : auto;
     height : 320px;
-    margin : 0;
+    margin : auto;
+
 }
 
 .wall{
