--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,3 +50,15 @@ body {
     top : 90px;
     left : 90px; 
 }
+
+.timer{
+    position : absolute;
+    width : 30px;
+    height : 30px;
+    top : 0px;
+    left : 0px;
+    color:white;
+    z-index:100;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
