--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,12 +58,13 @@ main {
 }
 
 .timer{
+    
     position : absolute;
     /* width : 30px;
     height : 30px; */
     top : 0px;
     left : 0px;
-    color:white;
+    color:red;
     z-index:100;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
