--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,14 @@ main {
     
 }
 
+.explosion{
+    position : absolute;
+    width : 50px;
+    height : 50px;
+    
+}
+
+
 .floor{
     position : absolute;
     width : 50px;
@@ -62,8 +70,8 @@ main {
     position : absolute;
     /* width : 30px;
     height : 30px; */
-    top : 0px;
-    left : 0px;
+    top : 10px;
+    left : 10px;
     color:red;
     z-index:100;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
