--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,3 +78,27 @@ main {
     
 
 }
+#gameover{
+    position: absolute;
+    display: none;
+    width : 300px;
+    height : 100px;
+    top: 150px;
+    left:250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size:70px;
+    z-index:1000;
+    
+}
+.blink {
+    color:red; 
+    animation: colorblink 0.08s infinite;
+    }
+    @keyframes colorblink { 
+    0% { }
+    25% { color:green; } 
+    25% { color:rgb(38, 0, 255); }
+    10% { color:rgb(255, 255, 255); } 
+    10% { color:rgb(200, 170, 0)}
+    }
+    
