--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,3 +78,32 @@ main {
     
 
 }
+
+
+.panel{ 
+    justify-content: center;
+    height: 50rem;
+    width: 50rem;
+    background-image: url('../medias/panel.jpg');
+    background-repeat: no-repeat;
+    margin: auto;
+    text-align: center;
+    align-content: center;
+    padding-top: 25%;
+  
+}
+
+.butt{
+    width:8rem;
+    height: 4rem;
+    font-size: 1.5rem;
+    text-decoration: none !important;
+    font-weight: bolder;
+    background-color: beige;
+    border: 5px solid;
+    border-color: pink;
+}
+
+.tbut{
+    text-decoration: none;
+}
