--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,18 @@
 
 body {
-    margin : 0;
+    margin : auto;
+    background-color: #CFBDA8;
 }
 
 main {
     margin : auto;
 
 }
-
+h1{
+    text-align : center;
+    animation: colorblink 0.08s infinite;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 #map {
     position : relative;
     width : 700px;
