explosion block ok

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,7 @@ h1 {
     background-image : url('../medias/bomberman.svg');
     top : 50px;
     left : 50px;
+    z-index : 400;
 } 
 
 #monster{
