--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,11 @@ h1 {
     left : 100px; 
 }
 
+.replay{
+    font-size: 30px;
+    font-weight: bolder;
+}
+
 .timer{
     
     position : absolute;
