--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
 body {
-    margin: auto;
     background-color: #CFBDA8;
 }
 
 main {
     margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 h1 {
@@ -17,7 +19,20 @@ h1 {
     position: relative;
     width: 700px;
     height: 500px;
-    margin: auto;
+}
+
+.logo-left {
+    background-image: url('../medias/bomberman-logo.png');
+    background-repeat: no-repeat;
+    width: 236px;
+    height: 236px;
+}
+
+.logo-right {
+    background-image: url('../medias/bomberman-logo-right.png');
+    background-repeat: no-repeat;
+    width: 236px;
+    height: 236px;
 }
 
 .wall {
@@ -56,36 +71,35 @@ h1 {
 }
 
 #bomberman {
-    position : absolute;
-    width : 50px;
-    height : 50px;
-    background-image : url('../medias/bomberman.svg');
-    top : 50px;
-    left : 50px;
-    z-index : 400;
-} 
-
-#monster{
-    position : absolute;
-    background-image : url('../medias/monster.svg');
-    width : 50px;
-    height : 50px;
-    top : 100px;
-    left : 100px; 
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-image: url('../medias/bomberman.svg');
+    top: 50px;
+    left: 50px;
+    z-index: 400;
 }
 
-.replay{
+#monster {
+    position: absolute;
+    background-image: url('../medias/monster.svg');
+    width: 50px;
+    height: 50px;
+    top: 100px;
+    left: 100px;
+}
+
+.replay {
     font-size: 30px;
     font-weight: bolder;
 }
 
-.timer{
-    
-    position : absolute;
-    top : 10px;
-    left : 10px;
-    color:red;
-    z-index:100;
+.timer {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: red;
+    z-index: 100;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -149,18 +163,18 @@ h1 {
     font-size: 70px;
     z-index: 1000;
 }
-.lifebar{
+
+.lifebar {
     z-index: 10000;
     position: absolute;
     bottom: 6px;
     left: 5px;
 }
+
 .blink {
     color: red;
     animation: colorblink 0.08s infinite;
 }
-
-
 
 @keyframes colorblink {
     0% {}
