--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,9 @@
 body {
-    background-color: #CFBDA8;
+    background-image: url('../medias/background.png');
+    background-size : cover;
+    background-size: cover;
+    max-height: 1200px;
+    max-width: 1920px;
 }
 
 main {
@@ -19,6 +23,7 @@ h1 {
     position: relative;
     width: 700px;
     height: 500px;
+    background-color : rgba(254, 254, 254, 0.3)
 }
 
 .logo-left {
@@ -39,14 +44,14 @@ h1 {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-image: url('../medias/wall-d.svg');
+
 }
 
 .wall-destruct {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-image: url('../medias/wall-d.svg');
+    background-image: url('../medias/cloud.svg');
 }
 
 .explosion {
@@ -125,7 +130,7 @@ h1 {
     justify-content: center;
     width: 700px;
     height: 500px;
-    background-image: url(../medias/panel.jpg);
+    background-image: url('../medias/panel.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     margin: auto;
