--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,6 +149,17 @@ h1 {
     font-size: 70px;
     z-index: 1000;
 }
+#gamewin {
+    position: absolute;
+    display: none;
+    width: 300px;
+    height: 100px;
+    top: 150px;
+    left: 250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 70px;
+    z-index: 1000;
+}
 .lifebar{
     z-index: 10000;
     position: absolute;
